  * Bug fixes 
   - [#17799] : have mpi_group_range_incl and mpi_group_range_excl better test some corner cases
   - Correctly use loopback on fat-tree clusters
   - Asynchronous small messages shouldn't trigger deadlocks anymore
 SURF
  * Bug fixes 
   - "Full" network optimization flag was broken since Surf++
   - Better handling of precision flags in maxmin
   - Fix bug causing sometimes "Impossible" errors 
 XBT
  * New functions
   - Add a xbt_heap_update function, to avoid costly xbt_heap_remove+xbt_heap_insert use 
   - Add a xbt wrapper for simcall_mutex_trylock (asked in [#17878])
   - Add two new log appenders : rollfile and splitfile. Patch by Fabien Chaix.


 -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.11) stable; urgency=low

 The Class Release.

 Tools:
 * Normalizing pointers addresses tool for better diff between logs

 Examples:
 * Add cloud examples using new VMs
   - examples/msg/cloud/two_tasks_vm.tesh
   - examples/msg/cloud/simple_vm.tesh
   - examples/java/cloud/cloud.tesh
   - examples/java/cloud/migration/migration.tesh
 * Add java surf examples:
   - examples/java/surfPlugin/surf_plugin.tesh
   - examples/java/reservationSurfPlugin/reservation_surf_plugin.tes
   - examples/java/surfCpuModel/surf_cpu_model.tesh
 * Add SMPI+MSG example:
   - examples/smpi/smpi_msg_masterslave/

 TeshSuite:
 * Add tests:
   - msg process test
   - msg task destroy cancel test
   - msg_host on/off test
 * Move all tests in testsuite to teshsuite (adding tesh files)
 * Restructure teshsuites
   - one folder for each kind of test
 * Restructure AddTests.cmake
   - unify tests names
   - structure the order of tests (with sections)

 MSG:
 * Add virtual machine
   - creation of a VM on a PM
   - migration of a VM from a PM to another PM
 * New functions
   - MSG_process_join(msg_process_t process, double timeout)
   - msg_bar_t MSG_barrier_init(unsigned int count)
   - int MSG_barrier_wait(msg_bar_t barrier)